--- a/course.yml
+++ b/course.yml
@@ -1,7 +1,7 @@
 title            : RDC
 instructors      :
  - 20100guillemot@gmail.com
-description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
-university       : DataCamp
-difficulty_level : 2
-time_needed      : 1 hour
+description      : This is a beginner course to learn R
+university       : Pasteur Institute
+difficulty_level : 1
+time_needed      : 2 hour
